# detect-image

./: environment_conda.yml  pyproject.toml  requirements.txt  result.csv  training.py
settings/: logging_config.py
