[tool.poetry]
name = "image_reco"
version = "0.1.0"
description = ""
authors = ["bruce <bruceyu1113@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tensorflow = "^2.9.1"
numpy = "^1.22.4"
Pillow = "^9.1.1"
matplotlib = "^3.5.2"
scikit-learn = "^1.1.1"
opencv-python = "^4.6.0"
jupyter = "^1.0.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
